--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+This file lists the Python packages your project depends on. It allows anyone to set up the same environment easily.
 
+langchain
+langchain-experimental
+langchain-community
+langchain-neo4j
+neo4j
+langchain-ollama
